--- a/strings.html
+++ b/strings.html
@@ -15,20 +15,25 @@
     var output = document.querySelector("p");
     output.textContent = 10;
     /* STEP 1: Creating Strings */
-
+    var myString = "My new string!";
+    console.log(myString);
     // Note - whether you use 'single' or "double" quotes is a personal preference - try to be consistent
 
     /* STEP 2: Escaping Characters */
-
+    var myString = "My \"string\"";
+    console.log(myString);
     /* STEP 3: Concatenation */
-
+    var myString = myString + " contains text information!";
+    console.log(myString);
     /* STEP 4: Numbers and Strings */
 
     // numbers can be converted to strings
-
+    var myNumber = 4;
+    console.log(String(myNumber));
     // strings can be converted to numbers, too
-
+    console.log(Number(output.textContent));
     // and back again, if we want
+    console.log(String(Number(output.textContent)));
 </script>
 
 </html>
