--- a/string-methods.html
+++ b/string-methods.html
@@ -16,18 +16,22 @@
     var myString = "Hello! How are you are?";
 
     /* STEP 1: String Length */
-
+    console.log(myString.length);
     /* STEP 2: Retrieving a Specific String Character */
-
+    console.log(myString[4]);
     /* STEP 3: Extracting Part of a String */
-
+    console.log(myString.slice(4, 11));
     // Note - if the substring is not found within the string, indexOf() returns -1
-
+    console.log(myString.indexOf("How"));
+    console.log(myString.indexOf("Heck"));
     // Note - if you don't specify where to end the slice, the method returns the rest of the string
-
+    console.log(myString.slice(6));
     /* STEP 4: Changing Case */
-
+    console.log(myString.toUpperCase());
+    console.log(myString.toLowerCase());
     /* STEP 5: Updating Parts of a String */
+    var updatedString = myString.replace(" are?", " ?");
+    output.textContent = updatedString;
 </script>
 
 </html>
